# lola-os

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
documentation/do/: blueprint.md  branding.md  prompt.md  roadmap.md
lola/: Makefile  guide.md
lola/lola-infra/: Dockerfile  README.md  config.docker.yaml  docker-compose.yml
lola/lola-infra/dashboard/: index.html  nginx.conf
lola/lola-infra/scripts/: deploy-systemd.sh  integration-test.sh  run-replay.sh
lola/lola-os/: README.md
lola/lola-os/lola-core/: README.md  config.example.yaml  go.mod  go.sum
lola/lola-sdks/: CONTRIBUTING.md  README.md
lola/lola-sdks/go/: README.md  client.go  go.mod  go.sum  overrides.go  overrides_test.go  tool.go
lola/lola-sdks/python/: README.md  pyproject.toml
lola/lola-sdks/python/lola_os/: __init__.py  client.py  config.py  context.py  decorator.py  exceptions.py  functions.py
lola/lola-sdks/python/tests/: test_context.py  test_decorator.py  test_exceptions.py  test_functions.py  test_sdk.py
lola/lola-sdks/scripts/: build-all.sh  test-all.sh
lola/lola-sdks/typescript/: README.md  package-lock.json  package.json  run-tests.js  tsconfig.json  tsconfig.test.json
lola/lola-ui/: README.md  mdx-components.tsx  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
lola/lola-ui/app/: globals.css  layout.tsx  page.tsx
lola/lola-ui/components/: code-block.tsx  docs-sidebar.tsx  how-it-works-diagram.tsx  (+5 more)
lolaos-frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
lolaos-frontend/src/: index.css
(+110 files in other folders)
